# divineruin

./: .env.example  .gitignore  .prettierignore  .watchmanconfig  CLAUDE.md  LAUNCH.md  README.md  bunfig.toml  docker-compose.yml  eslint.config.js  package.json  pyrightconfig.json  tsconfig.json
apps/agent/: _gods_content.py  abilities.py  ability_persistence.py  ability_tools.py  action_tools.py  activity_templates.py  affect_analyzer.py  agent.py  archetypes.py  asset_utils.py  async_rules.py  async_worker.py  async_worker_claim.py  async_worker_config.py  async_worker_training.py  background_process.py  base_agent.py  bg_event_handlers.py  bg_speech.py  blacksmith_agent.py  blacksmith_tools.py  card_tap_handler.py  catalog_parse.py  character_spells.py  check_discovery.py  check_resolution.py  check_tools.py  choice_tools.py  city_agent.py  class_groups.py  combat_agent.py  combat_end.py  combat_init.py  combat_resolution.py  combat_support.py  combat_tools.py  combat_turn.py  companion_idle.py  companion_profiles.py  companion_relationship.py  (+128 more)
apps/agent/tests/: _db_lifecycle.py  archetype_abilities_config_fixture.py  archetype_milestones_config_fixture.py  archetypes_config_fixture.py  claim_stack_helpers.py  companion_profiles_config_fixture.py  conftest.py  dice_seeds.py  mentor_variants_config_fixture.py  npcs_config_fixture.py  racial_resonance_config_fixture.py  role_archetypes_config_fixture.py  sample_fixtures.py  settlement_templates_config_fixture.py  spells_config_fixture.py  test_abilities.py  test_ability_persistence.py  test_ability_tools.py  test_ability_variant_override.py  test_acceptance_reuse.py  test_affect_analyzer.py  test_affect_analyzer_analyzer.py  test_affect_analyzer_functions.py  test_agent.py  test_archetype_abilities_content.py  test_archetype_milestones_content.py  test_archetypes.py  test_archetypes_content.py  test_async_db.py  test_async_e2e.py  test_async_rules.py  test_async_worker.py  test_background_process.py  test_background_process_coverage.py  test_background_process_warm_layer.py  test_base_agent.py  test_bg_event_handlers.py  test_blacksmith_agent.py  test_blacksmith_handoff.py  test_card_tap_handler.py  (+164 more)
apps/agent/tests/acceptance/: _livekit.py  _livekit_client.py  _server.py  conftest.py  seeds.py  test_archetype_chassis.py  test_artificer_slot_e2e.py  test_concentration_persistence.py  test_content_catalog_endpoint.py  test_crafting_resolution_backfill.py  test_crafting_resolution_gate_e2e.py  test_crafting_skill_counter_cascade.py  test_data_channel.py  test_data_channel_roundtrip.py  test_durability_e2e.py  test_exploration_collapse.py  test_flickering_bonus_persistence.py  test_harness_db.py  test_m1_5_training_cycle.py  test_m1_6_companion_errands.py  test_m31_resonance_capstone.py  test_m32_hollow_echo_veil_ward_capstone.py  test_m33_casting_capstone.py  test_m34_concentration_racial_capstone.py  test_m52_workspace_resolution_capstone.py  test_m53_quality_outcomes_capstone.py  test_m5_verb_consolidation.py  test_m62_settlement_capstone.py  test_m6_4_companion_chain_capstone.py  test_m6_stage_schema.py  test_mentor_gating_e2e.py  test_mentor_variants.py  test_migration_044_resonance_backfill.py  test_milestone_progression.py  test_ops_async_reset_runbook.py  test_player_fk_backfill_cascade.py  test_player_known_recipes_cascade.py  test_recipe_learning.py  test_recipe_loading.py  test_recipe_slots_loading.py  (+5 more)
apps/agent/tests/combat/: _helpers.py  test_death_save.py  test_end_combat.py  test_resolve_enemy_turn.py  test_start_combat.py
apps/agent/tests/companion/: test_bg_speech.py  test_combat_memory.py  test_relationship_persistence.py  (+1 more)
(+582 files in other folders)
