[project]
name = "divineruin-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-anthropic~=1.4",
    "livekit-plugins-deepgram~=1.4",
    "livekit-plugins-inworld~=1.4",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "UP007",   # X | Y union syntax (keep Optional for clarity)
    "SIM117",  # multiple-with statements — common in test mocking
    "SIM105",  # contextlib.suppress — style preference
    "RUF001",  # ambiguous unicode — intentional punctuation matching
    "RUF012",  # mutable class defaults — fine for test fixtures
]

[tool.ruff.lint.isort]
known-first-party = ["db", "tools", "prompts", "voices", "session_data", "affect_analyzer", "game_events", "rules_engine", "dialogue_parser", "latency", "background_process", "db_errors", "async_rules", "async_worker", "narration", "tts_prerender", "activity_templates", "creation_data", "creation_rules", "creation_prompts", "creation_tools"]
