[project]
name = "divineruin-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-anthropic~=1.5",
    "livekit-plugins-deepgram~=1.5",
    "livekit-plugins-inworld~=1.5",
    "asyncpg>=0.30.0",
    "redis>=7.4.0",
    "anthropic>=0.86.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["error::RuntimeWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "UP007",   # X | Y union syntax (keep Optional for clarity)
    "SIM117",  # multiple-with statements — common in test mocking
    "SIM105",  # contextlib.suppress — style preference
    "RUF001",  # ambiguous unicode — intentional punctuation matching
    "RUF012",  # mutable class defaults — fine for test fixtures
]

[tool.ruff.lint.isort]
known-first-party = ["db", "tools", "prompts", "voices", "session_data", "affect_analyzer", "game_events", "rules_engine", "dialogue_parser", "latency", "background_process", "db_errors", "async_rules", "async_worker", "narration", "tts_prerender", "tts_pauses", "activity_templates", "creation_data", "creation_rules", "creation_prompts", "creation_tools", "card_tap_handler", "session_summary"]
